Add a simple action

--- a/action.yml
+++ b/action.yml
@@ -1,1 +1,14 @@
+name: "Hello World"
+description: "This is a simple hello world action"
+author: Swagata Bandyopadhyay
 
+inputs:
+  custom-text:
+    description: "Custom text to echo"
+    required: true
+
+runs:
+  using: docker
+  image: Dockerfile
+  args:
+    - ${{ inputs.custom-text }}
